# y-data

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  meson.build  meson_options.txt  y-data.mk
docs/reference/: Makefile.am  meson.build  y-0.0-sections.txt  y-data-sections.txt  ydata-docs.xml
src/: Makefile.am  README  meson.build  y-config.h.in  y-data-class.h  y-data-derived.c  y-data-derived.h  y-data-simple.c  y-data-simple.h  y-data-tcp.c  y-data-tcp.h  y-data-vector-slice.c  y-data-vector-slice.h  y-data.c  y-data.h  y-fft-operation.c  y-fft-operation.h  y-hdf.c  y-hdf.h  y-linear-range.c  y-linear-range.h  y-operation.c  y-operation.h  y-scalar-property.c  y-scalar-property.h  y-simple-operation.c  y-simple-operation.h  y-slice-operation.c  y-slice-operation.h  y-struct.h  y-subset-operation.c  y-subset-operation.h  y-vector-ring.c  y-vector-ring.h
test/: Makefile.am  gir_test.py  meson.build  test-tcp-server.c  testdata.c  testhdf5.c  testsignals.c
